# ENTROPIC

./: .gitignore  README.md  go.work  package.json  tsconfig.base.json  turbo.json
apps/cli/: package.json
apps/cli/src/: index.ts
apps/cli/src/__tests__/: create.test.ts
apps/cli/src/commands/: build.ts  create.ts  publish.ts  sync.ts  validate.ts  version.ts
apps/cli/src/templates/: index.ts
apps/cli/src/utils/: config.ts  formatter.ts  logger.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.tsx
docker/: Dockerfile.cli  Dockerfile.web  docker-compose.yml
docs/: CLI.md  PORTAL.md  STREAMING.md  WASM.md
entropic-dna-api/: Makefile  README.md  config.example.yaml  docker-compose.yml  go.mod  go.sum
entropic-dna-api/cmd/server/: main.go
entropic-dna-api/docker/: Dockerfile
entropic-dna-api/docs/: API.md
entropic-dna-api/internal/api/: grpc_server.go  handlers.go  rest_gateway.go
entropic-dna-api/internal/config/: config.go
entropic-dna-api/internal/ffi/: rust_binding.go
entropic-dna-api/internal/models/: game_dna.go
entropic-dna-api/internal/storage/: errors.go  memory.go  migrations.go  postgres.go  storage.go
entropic-dna-api/proto/: buf.gen.yaml  buf.yaml
entropic-dna-api/tests/: integration_test.go
entropic-dna-core/: Cargo.toml  README.md
entropic-dna-core/examples/: create_simple_game.rs  serialize_game.rs  validation_workflow.rs  version_handling.rs
entropic-dna-core/src/: lib.rs  tests.rs
entropic-dna-core/src/errors/: mod.rs
entropic-dna-core/src/schema/: mod.rs
entropic-dna-core/src/serialization/: mod.rs
entropic-dna-core/src/validation/: checksum.rs  conflict_detector.rs  constraints.rs  mod.rs  rules.rs
entropic-dna-core/src/version/: mod.rs
entropic-spatial-engine/: Cargo.toml  README.md
entropic-spatial-engine/benches/: chunk_loading.rs  pathfinding.rs  spatial_queries.rs
entropic-spatial-engine/examples/: generate_world.rs  pathfinding_demo.rs  spatial_queries.rs  stream_chunks.rs
entropic-spatial-engine/src/: chunk_manager.rs  collision.rs  constants.rs  errors.rs  lib.rs  lod.rs  noise.rs  octree.rs  pathfinding.rs  serialization.rs  spatial_queries.rs  streaming.rs  terrain_generator.rs  voxel.rs
entropic-spatial-engine/tests/: chunk_streaming_test.rs  terrain_generation_test.rs
entropic-world-core/: CHECKLIST.md  Cargo.toml  README.md  SUMMARY.md
entropic-world-core/docs/: ARCHITECTURE.md  DATA_MODEL.md
entropic-world-core/examples/: create_world.rs  serialize_world.rs  spatial_queries.rs
entropic-world-core/src/: constants.rs  errors.rs  lib.rs
entropic-world-core/src/economy/: item.rs  market.rs  mod.rs  resource.rs  settlement.rs  supply_chain.rs  trade.rs
entropic-world-core/src/ecosystem/: food_chain.rs  mod.rs  population_control.rs  species.rs
entropic-world-core/src/events/: event.rs  event_queue.rs  mod.rs  triggers.rs
entropic-world-core/src/population/: entity.rs  faction.rs  memory.rs  mod.rs  npc.rs  relationship.rs  schedule.rs
entropic-world-core/src/serialization/: compression.rs  mod.rs  world_serde.rs
entropic-world-core/src/spatial/: chunk.rs  coordinates.rs  mod.rs  region.rs  spatial_index.rs  terrain.rs
entropic-world-core/src/temporal/: calendar.rs  mod.rs  seasons.rs  time.rs  weather.rs
entropic-world-core/src/world/: mod.rs  world_config.rs  world_metadata.rs  world_state.rs
entropic-world-core/tests/: integration_test.rs  population_test.rs  spatial_test.rs  temporal_test.rs  world_creation_test.rs
(+21 files in other folders)
