[package]
name = "entropic-dna-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Entropic Engine Team"]
description = "Canonical Game DNA schema and data model for the ENTROPIC game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/entropic-engine/entropic-dna-core"
readme = "README.md"
keywords = ["game", "engine", "dna", "schema", "serialization"]
categories = ["game-development", "data-structures", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "std"] }
thiserror = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"

[lib]
name = "entropic_dna_core"
path = "src/lib.rs"

[[example]]
name = "create_simple_game"
path = "examples/create_simple_game.rs"

[[example]]
name = "serialize_game"
path = "examples/serialize_game.rs"

[[example]]
name = "version_handling"
path = "examples/version_handling.rs"