[package]
name = "entropic-world-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Entropic Engine Team"]
description = "Foundational data models for ENTROPIC's world simulation system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/entropic-engine/entropic-world-core"
readme = "README.md"
keywords = ["game", "world", "simulation", "engine", "spatial"]
categories = ["game-development", "data-structures", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"

[lib]
name = "entropic_world_core"
path = "src/lib.rs"

[[example]]
name = "create_world"
path = "examples/create_world.rs"

[[example]]
name = "serialize_world"
path = "examples/serialize_world.rs"

[[example]]
name = "spatial_queries"
path = "examples/spatial_queries.rs"
